feat: Rename app and integrate Yandex services
Update project metadata, configuration files, and application code to reflect the new "Yandex Connect" branding. Integrate Yandex Translate functionality and enhance API logging capabilities for better monitoring.

- Renamed application ID, name, and descriptions across configuration files (.env.example, capacitor.config.ts, metadata.json, package.json).
- Updated server configuration to remove deprecated Yandex API settings and add a placeholder for the new Yandex API key.
- Refactored `App.tsx` to introduce a tab-based navigation for Translate and Logs, and initialized Yandex service integration.
- Updated `server.ts` to remove unused PDF extraction logic and refactor existing API handling.
- Implemented a new `ApiLogger` class in `src/services/logger.ts` to manage and broadcast API request/response/error logs.
- Modified `src/services/yandexService.ts` to interact with Yandex Translate API.
- Introduced custom styling for scrollbars and global themes in `src/index.css`.
- Updated Capacitor CLI commands in `package.json` to use the full package name.

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "preview": "vite preview",
     "clean": "rm -rf dist",
     "lint": "tsc --noEmit",
-    "cap:sync": "npx cap sync",
-    "cap:open": "npx cap open android",
-    "cap:build": "npm run build && npx cap sync"
+    "cap:sync": "npx @capacitor/cli sync",
+    "cap:open": "npx @capacitor/cli open android",
+    "cap:build": "npx vite build && npx @capacitor/cli sync"
   },
   "dependencies": {
     "@capacitor/android": "^8.1.0",
