feat: Rebrand to Service Assistant and integrate AI
Update application metadata, environment variables, and dependencies to reflect the rebranding from "Yandex Connect" to "Service Assistant." This commit introduces the core AI functionality by integrating the Gemini API for maintenance management.

Key changes include:
- Renaming the application in `metadata.json` and `.env.example`.
- Removing Capacitor dependencies as they are no longer needed.
- Adding the `@google/genai` package.
- Updating the server to handle CORS and large JSON payloads.
- Implementing basic PDF extraction capabilities on the server.
- Refactoring the UI to support the new AI-powered maintenance features, including equipment management, task scheduling, and settings.
- Introducing utility functions for Tailwind CSS class merging.
- Updating CSS to align with the new application theme.

--- a/package.json
+++ b/package.json
@@ -8,15 +8,9 @@
     "build": "vite build",
     "preview": "vite preview",
     "clean": "rm -rf dist",
-    "lint": "tsc --noEmit",
-    "cap:sync": "npx @capacitor/cli sync",
-    "cap:open": "npx @capacitor/cli open android",
-    "cap:build": "npx vite build && npx @capacitor/cli sync"
+    "lint": "tsc --noEmit"
   },
   "dependencies": {
-    "@capacitor/android": "^8.1.0",
-    "@capacitor/cli": "^8.1.0",
-    "@capacitor/core": "^8.1.0",
     "@google/genai": "^1.29.0",
     "@tailwindcss/vite": "^4.1.14",
     "@vitejs/plugin-react": "^5.0.4",
