--- a/react-native-app/app.json
+++ b/react-native-app/app.json
@@ -14,11 +14,13 @@
     "assetBundlePatterns": [
       "**/*"
     ],
+    "plugins": [
+      "expo-screen-capture"
+    ],
     "ios": {
       "supportsTablet": true
     },
     "android": {
-      "permissions": ["android.permission.DETECT_SCREEN_CAPTURE"],
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
