--- a/react-native-app/package.json
+++ b/react-native-app/package.json
@@ -19,7 +19,8 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "expo-document-picker": "~11.10.1",
-    "expo-file-system": "~16.0.6"
+    "expo-file-system": "~16.0.6",
+    "expo-screen-capture": "~5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
